Refactor project structure

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vcpkg"]
 	path = vcpkg
 	url = git@github.com:microsoft/vcpkg.git
+[submodule "vcpkg-overlay/triplets"]
+	path = vcpkg-overlay/triplets
+	url = git@github.com:SchaichAlonso/vcpkg-overlay-triplets.git
